force-app/main/default/objects/Course_Enrollment__c/Course_Enrollment__c.object-meta.xml
<CustomObject>
    <label>BeADisciple.com Course Enrollment</label>
    <nameField>
        <displayFormat>CEN-{000000}</displayFormat>
        <label>Course Enrollment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BeADisciple.com Course Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>