force-app/main/default/objects/Course_Enrollment__c/fields/Acknowledge_RefundPolicyCourseMaterials__c.field-meta.xml
<CustomField>
    <fullName>Acknowledge_RefundPolicyCourseMaterials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledge RefundPolicyCourseMaterials</label>
    <type>Checkbox</type>
</CustomField>