force-app/main/default/objects/Course_Enrollment__c/fields/Acknowledge_System_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Acknowledge_System_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledge System Requirements</label>
    <type>Checkbox</type>
</CustomField>