force-app/main/default/objects/Course_Enrollment__c/fields/Church_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Church_Affiliation__c</fullName>
    <label>Church Affiliation</label>
    <length>250</length>
    <type>Text</type>
</CustomField>