force-app/main/default/objects/Course_Enrollment__c/fields/Course_Enrolling_In__c.field-meta.xml
<CustomField>
    <fullName>Course_Enrolling_In__c</fullName>
    <label>Course Enrolling In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>