force-app/main/default/objects/Course_Enrollment__c/fields/Course_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Course_Name_Text__c</fullName>
    <description>This field is used for merge fields in automated emails.</description>
    <formula>Course_Session__r.Disciple_Course__r.Name</formula>
    <inlineHelpText>This field is used for merge fields in automated emails.</inlineHelpText>
    <label>Course Name Text</label>
    <type>Text</type>
</CustomField>