force-app/main/default/objects/Course_Enrollment__c/fields/Course_Session__c.field-meta.xml
<CustomField>
    <fullName>Course_Session__c</fullName>
    <label>Course Session</label>
    <referenceTo>Course_Session__c</referenceTo>
    <relationshipLabel>Session Records</relationshipLabel>
    <relationshipName>Course_Enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>