force-app/main/default/objects/Course_Enrollment__c/fields/Course_Session_start_date__c.field-meta.xml
<CustomField>
    <fullName>Course_Session_start_date__c</fullName>
    <formula>Course_Session__r.Start_Date__c</formula>
    <label>Course Session start date</label>
    <type>Date</type>
</CustomField>