force-app/main/default/objects/Course_Enrollment__c/fields/Course_Session_URL__c.field-meta.xml
<CustomField>
    <fullName>Course_Session_URL__c</fullName>
    <description>This field is used for merge fields in automated emails.</description>
    <formula>Course_Session__r.Course_URL__c</formula>
    <inlineHelpText>This field is used for merge fields in automated emails.</inlineHelpText>
    <label>Course Session URL</label>
    <type>Text</type>
</CustomField>