force-app/main/default/objects/Course_Enrollment__c/fields/IFD_Portion_Paid__c.field-meta.xml
<CustomField>
    <fullName>IFD_Portion_Paid__c</fullName>
    <label>IFD Portion Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>