force-app/main/default/objects/Course_Enrollment__c/fields/Instructor_Portion_Paid__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Portion_Paid__c</fullName>
    <label>Instructor Portion Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>