force-app/main/default/objects/Course_Enrollment__c/fields/Participant_Phone_Number2__c.field-meta.xml
<CustomField>
    <fullName>Participant_Phone_Number2__c</fullName>
    <label>Participant Phone Number</label>
    <type>Phone</type>
</CustomField>