force-app/main/default/objects/Course_Enrollment__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <inlineHelpText>Total Amount paid by the student for this class. Refunds should show $0.</inlineHelpText>
    <label>Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>