force-app/main/default/objects/Course_Enrollment__c/fields/Student_Email__c.field-meta.xml
<CustomField>
    <fullName>Student_Email__c</fullName>
    <description>This field is used for merge fields in automated emails.</description>
    <formula>Student__r.Email</formula>
    <inlineHelpText>This field is used for merge fields in automated emails.</inlineHelpText>
    <label>Student Email</label>
    <type>Text</type>
</CustomField>