force-app/main/default/objects/Course_Enrollment__c/fields/Student_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Full_Name__c</fullName>
    <description>This field is used for merge fields in automated emails.</description>
    <formula>Student__r.FirstName  &amp; &quot; &quot; &amp;  Student__r.LastName</formula>
    <inlineHelpText>This field is used for merge fields in automated emails.</inlineHelpText>
    <label>Student Full Name</label>
    <type>Text</type>
</CustomField>