force-app/main/default/objects/Course_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Course_Session__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>