force-app/main/default/objects/Course_Enrollment__c/listViews/Marked_Enrolled.listView-meta.xml
<ListView>
    <fullName>Marked_Enrolled</fullName>
    <columns>NAME</columns>
    <columns>Enrollment_Status__c</columns>
    <columns>Student__c</columns>
    <columns>Course_Session__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enrollment_Status__c</field>
        <operation>equals</operation>
        <value>Enrolled</value>
    </filters>
    <label>Marked Enrolled</label>
</ListView>